Fix #1474